--- a/style.css
+++ b/style.css
@@ -28,3 +28,19 @@ h1 {
 	width: 200px;
 	margin: 20px;
 }
+
+body {
+	background-color: #efeee7;
+	margin: 0;
+	padding: 0;
+	font-family: "Georgia", "Times New Roman", "Times", Times Serif;
+	color: #333333;
+}
+
+header {
+	background-color: #333333;
+}
+
+h2 {
+	font-size: 24px;
+}
